@@ -70,6 +70,7 @@ class TestConventions {
     }
     test.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.net=ALL-UNNAMED",
             "-Djava.locale.providers=COMPAT");
   }
 
